Fix gradle compileTestJava
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>